# vibeEmbyPlayerQT

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.zh-CN.md  SMB-TODO.md  TODO.md
.github/workflows/: build-release.yml
VIBEDOCS/: DesktopLifecycle.md  EmbyJellyfinApi.md  GitHubActionsRelease.md  IPTV.md  MediaServices.md  PlayerRuntime.md  README.md  ScheduledPlayback.md  SettingsAppearance.md  WebDAV.md  WindowAppearanceController.md
bugFix/: 2026-06-21-15.11.08.md  2026-06-21-15.32.01.md  2026-06-21-15.48.45.md  2026-06-22-00.52.30.md  2026-06-22-01.14.41.md  2026-06-22-01.42.22.md  2026-06-22-14.26.39.md  2026-06-22-14.35.14.md  2026-06-22-14.42.01.md  2026-06-22-20.26.55.md  2026-06-23-02.25.14.md  2026-07-03-01.39.43.md  2026-07-03-02.03.32.md  2026-07-04-00.28.57.md  2026-07-04-00.44.50.md
docs/: BuildWindows.md
featDocs/: 2026-06-21-18.15.08.md  2026-06-21-19.13.43.md  2026-06-21-19.55.55.md  2026-06-21-20.14.25.md  2026-06-21-22.30.17.md  2026-06-21-23.11.32.md  2026-06-21-23.23.21.md  2026-06-22-00.07.10.md  2026-06-22-01.05.47.md  2026-06-22-13.37.31.md  2026-06-22-16.13.39.md  2026-06-22-16.54.53.md  2026-06-22-18.31.26.md  2026-06-22-19.48.09.md  2026-06-23-01.56.14.md  2026-06-23-02.10.02.md  2026-06-23-22.32.48.md  2026-06-23-23.09.14.md  2026-07-02-23.11.18.md  2026-07-03-00.42.04.md  2026-07-03-01.44.14.md  2026-07-03-14.42.38.md  2026-07-04-00.22.09.md  2026-07-04-00.39.21.md
icon/: app_icon.icns
packaging/linux/: vibePlayerQT.desktop.in
qml/: Main.qml
scripts/: build-clang.cmd  configure-clang.cmd
src/app/: TrayController.cpp  TrayController.h  WindowAppearanceController.cpp  WindowAppearanceController.h  main.cpp
src/database/: SessionRepository.cpp  SessionRepository.h
src/models/: DailyUsageStat.h  IptvChannel.h  IptvPlaylist.h  MediaItem.h  MediaLibrary.h  MediaPerson.h  ScheduledPlaybackTask.h  ServerConfig.h  ServiceCard.h  ServiceType.h  TransferTask.h  UserSession.h  WebDavItem.h
src/network/: NetworkClient.cpp  NetworkClient.h  NetworkError.h
src/player/: MpvVideoItem.cpp  MpvVideoItem.h  MpvWidget.cpp  MpvWidget.h  PlayerController.cpp  PlayerController.h
src/services/credentials/: CredentialStore.cpp  CredentialStore.h
src/services/emby/: EmbyClient.cpp  EmbyClient.h
src/services/iptv/: IptvParser.cpp  IptvParser.h
src/services/jellyfin/: JellyfinClient.cpp  JellyfinClient.h
src/services/media/: MediaServerClientBase.cpp  MediaServerClientBase.h  MediaServiceClient.h
src/services/scheduler/: ScheduledPlaybackManager.cpp  ScheduledPlaybackManager.h  ScheduledPlaybackSchedule.cpp  ScheduledPlaybackSchedule.h
src/services/webdav/: TransferManager.cpp  TransferManager.h  WebDavClient.cpp  WebDavClient.h  WebDavDownloadPlanner.cpp  WebDavDownloadPlanner.h  WebDavPlaybackProxy.cpp  WebDavPlaybackProxy.h
src/settings/: AppSettings.h
src/utils/: AppLogger.cpp  AppLogger.h  JsonUtils.cpp  JsonUtils.h
src/viewmodels/: AppViewModel.cpp  AppViewModel.h  DailyUsageStatsListModel.cpp  DailyUsageStatsListModel.h  IptvChannelListModel.cpp  IptvChannelListModel.h  MediaItemListModel.cpp  MediaItemListModel.h  MediaLibraryListModel.cpp  MediaLibraryListModel.h  PersonListModel.cpp  PersonListModel.h  ScheduledPlaybackTaskListModel.cpp  ScheduledPlaybackTaskListModel.h  ServiceCardListModel.cpp  ServiceCardListModel.h  TransferTaskListModel.cpp  TransferTaskListModel.h  WebDavItemListModel.cpp  WebDavItemListModel.h
tests/: EmbyClientSearchTest.cpp  MediaServerSearchTest.cpp  ScheduledPlaybackScheduleTest.cpp  TransferManagerTest.cpp  WebDavDownloadPlannerTest.cpp  WebDavItemListModelTest.cpp
